--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,4 +10,8 @@ pydantic==1.10.13
 python-dotenv==1.0.0
 pytest==7.4.3
 httpx==0.25.1
-PyYAML>=6.0 
+PyYAML>=6.0
+google-api-python-client==2.123.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0 
