--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,4 +14,5 @@ PyYAML>=6.0
 google-api-python-client==2.123.0
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.0 
+google-auth-oauthlib==1.2.0
+docxtpl==0.16.8 
